--- a/src/app/components/auth-modal/auth-modal.component.html
+++ b/src/app/components/auth-modal/auth-modal.component.html
@@ -1,4 +1,4 @@
-<form *ngIf="!cognitoService.hasValidToken()" [formGroup]="authForm" (ngSubmit)="login()" class="auth-form-inline">
+<form *ngIf="!hasValidSession" [formGroup]="authForm" (ngSubmit)="login()" class="auth-form-inline">
   <div class="p-field">
     <label for="username">Email:</label>
     <input id="username" type="text" pInputText formControlName="username" placeholder="Email" required />
