--- a/src/app/pages/ticker-page/ticker-page.component.html
+++ b/src/app/pages/ticker-page/ticker-page.component.html
@@ -1,15 +1,22 @@
 <div>
+    <h2>{{this.tickerName}}</h2>
+    <div *ngIf="tickerMetadata">
+        <h4>{{this.tickerMetadata.sector}}</h4>
+        <h4>{{this.tickerMetadata.industry}}</h4>
+    </div>
+
     <div *ngIf="isLoading">
-        <p-skeleton width="100%" height="200px"></p-skeleton>
         <p-skeleton width="200px" height="50px" styleClass="mt-2"></p-skeleton>
+        <br>
+        <p-skeleton width="100%" height="300px"></p-skeleton>
     </div>
 
     <div *ngIf="errorMessage" class="error">
         {{ errorMessage }}
     </div>
 
+    
     <div *ngIf="chartData">
-        <h2>{{this.tickerName}}</h2>
         <div class="date-range-selector">
             <label for="range">Select Date Range:</label>
             <p-selectButton [options]="ranges" [formControl]="dateRangeFormControl" styleClass="custom-select-button"
@@ -22,5 +29,18 @@
                 [width]="chartWidth">
             </p-chart>
         </div>
+    </div>
+
+    <div *ngIf="tickerMetadata">
+        <p-fieldset legend="About">
+            <p *ngIf="this.tickerMetadata.website; else noSiteFound">
+                <a [href]="this.tickerMetadata.website" target="_blank">{{this.tickerMetadata.website}}</a>
+            </p>
+            <ng-template #noSiteFound>
+                <h5>No website found.</h5>
+            </ng-template>
+            <p>{{this.tickerMetadata.description}}</p>
+
+        </p-fieldset>
     </div>
 </div>
