--- a/src/app/pages/ticker-page/ticker-page.component.html
+++ b/src/app/pages/ticker-page/ticker-page.component.html
@@ -1,46 +1,56 @@
+<p-scrollTop [threshold]="10"></p-scrollTop>
 <div>
-    <h2>{{this.tickerName}}</h2>
-    <div *ngIf="tickerMetadata">
-        <h4>{{this.tickerMetadata.sector}}</h4>
-        <h4>{{this.tickerMetadata.industry}}</h4>
-    </div>
+    <div class="buffer-head"></div>
+    <div class="ticker-content">
+        <div class="ticker-data">
+            <h1>{{this.tickerName}}</h1>
+            <div *ngIf="tickerMetadata">
+                <h5>{{this.tickerMetadata.sector}}</h5>
+                <h4>{{this.tickerMetadata.industry}}</h4>
+            </div>
 
-    <div *ngIf="isLoading">
-        <p-skeleton width="200px" height="50px" styleClass="mt-2"></p-skeleton>
-        <br>
-        <p-skeleton width="100%" height="300px"></p-skeleton>
-    </div>
+            <div *ngIf="isLoading">
+                <p-skeleton width="200px" height="50px" styleClass="mt-2"></p-skeleton>
+                <br>
+                <p-skeleton width="100%" height="300px"></p-skeleton>
+            </div>
 
-    <div *ngIf="errorMessage" class="error">
-        {{ errorMessage }}
+            <div *ngIf="errorMessage" class="error">
+                {{ errorMessage }}
+            </div>
+        </div>
     </div>
-
     
-    <div *ngIf="chartData">
-        <div class="date-range-selector">
+    <div class="ticker-content" *ngIf="chartData">
+        <div class="date-range-selector ticker-data">
             <label for="range">Select Date Range:</label>
             <p-selectButton [options]="ranges" [formControl]="dateRangeFormControl" styleClass="custom-select-button"
                 placeholder="Select a range">
             </p-selectButton>
         </div>
 
-        <div style="width: 100%; position: relative;">
+        <div class="chart-containter" >
             <p-chart type="line" [data]="chartData" [options]="chartOptions" [height]="chartHeight"
                 [width]="chartWidth">
             </p-chart>
         </div>
     </div>
 
-    <div *ngIf="tickerMetadata">
-        <p-fieldset legend="About">
+    <div *ngIf="tickerMetadata" class="ticker-content">
+        <p-fieldset class="ticker-data" legend="Business Info">
+            <p>{{this.tickerMetadata.description}}</p>
+        </p-fieldset>
+        <br>
+        <p-fieldset class="ticker-data website-container" legend="Website">
             <p *ngIf="this.tickerMetadata.website; else noSiteFound">
                 <a [href]="this.tickerMetadata.website" target="_blank">{{this.tickerMetadata.website}}</a>
             </p>
             <ng-template #noSiteFound>
                 <h5>No website found.</h5>
             </ng-template>
-            <p>{{this.tickerMetadata.description}}</p>
-
         </p-fieldset>
+
+        
     </div>
+    <div class="buffer-room"></div>
 </div>
