added portfolio transaction history component for individual holding page

--- a/src/app/pages/portfolio-overview/portfolio-overview.component.html
+++ b/src/app/pages/portfolio-overview/portfolio-overview.component.html
@@ -1,6 +1,7 @@
 <div *ngIf="cognitoService.currentUserSignal(); else loggedOutTemplate">
     <h1>Welcome!</h1>
     <portfolio-display-list></portfolio-display-list>
+    <transactions-history-overview />
   </div> 
   
   <ng-template #loggedOutTemplate>
