--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,10 @@ html, body {
   font-family: Quicksand, sans-serif !important;
 }
 
+h1, h2, h3, h4, h5 {
+  font-family: Quicksand, sans-serif !important;
+}
+
 //Angular Material font overrides
 .mat-typography, .mat-button, .mat-input-element, .mat-select-value-text, .mat-checkbox-label, .mat-radio-label-content, 
 .mat-card-title, .mat-card-content, .mat-form-field-label {
