--- a/src/app/components/ticker-holdings-card/ticker-holdings-card.component.scss
+++ b/src/app/components/ticker-holdings-card/ticker-holdings-card.component.scss
@@ -1,4 +1,48 @@
-.holding-data-card{
-border: 1px solid #ccc; 
-border-radius: 8px;
+header {
+    display:flex;
+    flex-direction: row;
+    align-items:stretch;
+    justify-content: space-between;
+    margin-left:3em;
+    max-width: 80%;
+}
+
+.holding-data-card {
+    display:flex;
+    flex-direction: column;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    flex-grow: 1;
+}
+div.p-card-content {
+    padding: 0;
+}
+
+.holding-summary {
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.price-chart {
+    display: flex;
+    flex-grow: 1;
+    box-sizing: border-box;
+}
+
+p-chart.p-element {
+    display: block;
+    width: 80%;
+    flex-grow: 1;
+    box-sizing: border-box;
+}
+
+
+.holding-summary div {
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
