styling on ticker cards and data for holding details

--- a/src/app/components/porfolio-display-list/porfolio-display-list.component.html
+++ b/src/app/components/porfolio-display-list/porfolio-display-list.component.html
@@ -7,8 +7,12 @@
         [price]="holding.price"
         [totalValue]="holding.totalValue"
         [chartData]="holding.chartData"
-        [name]="holding.name">
+        [name]="holding.name"
+        [minPrice]="holding.min"
+        [maxPrice]="holding.max"
+        [investment]="holding.totalInvestment">
       </ticker-holdings-card>
     </div>
   </div>
 </div>
+
