--- a/src/app/components/transactions-history-overview/transactions-history-overview.component.html
+++ b/src/app/components/transactions-history-overview/transactions-history-overview.component.html
@@ -11,8 +11,6 @@
 </div>
 
 <ng-template #investmentPerformanceTemplate>
-    <!-- Investment Performance Section -->
-
     <div *ngIf="currentStockPrice !== null">
         <h2>Current Stock Price: ${{ currentStockPrice.toFixed(2) }}</h2>
     </div>
@@ -20,12 +18,10 @@
     <div *ngIf="investmentPerformance; else noInvestmentDataTemplate">
         <h2>Investment Overview</h2>
 
-        <!-- Total Shares Held -->
         <div>
             <p>Total Shares Held: {{ getTotalSharesHeld() }}</p>
         </div>
 
-        <!-- Current Investment Value -->
         <div>
             <span [ngClass]="{
                 'positive': investmentPerformance.currentInvestmentValue >= investmentPerformance.totalSpent,
@@ -35,25 +31,23 @@
             </span>
         </div>
 
-        <!-- Net Profit/Loss Display -->
         <div>
-            <span [ngClass]="{
-                'positive': investmentPerformance.netProfitLoss >= 0,
-                'negative': investmentPerformance.netProfitLoss < 0
-            }">
-                Net Profit/Loss: {{ investmentPerformance.netProfitLoss | currency:'USD':'symbol':'1.2-2' }}
-            </span>
+            <p>
+                Net Profit/Loss: 
+                <span [style.color]="investmentPerformance.netProfitLoss > 0 ? 'green' : 'red'">
+                    {{ investmentPerformance.netProfitLoss | currency:'USD':'symbol':'1.2-2' }}
+                </span>
+            </p>
+
+            
         </div>
 
-        <!-- Percentage Change -->
-        <div>
-            <p>Percentage Change: {{ ((investmentPerformance.currentInvestmentValue - investmentPerformance.totalSpent) / investmentPerformance.totalSpent * 100) | number: '1.0-2' }}%</p>
-        </div>
 
-        <!-- Total Spent and Earned -->
+        
+        
         <div>
-            <p>Total Spent: {{ investmentPerformance.totalSpent | currency:'USD':'symbol':'1.2-2' }}</p>
-            <p>Total Earned: {{ investmentPerformance.totalEarned | currency:'USD':'symbol':'1.2-2' }}</p>
+            <p>ROI: {{ investmentPerformance.roi }}%</p>
+            <p>Invested: {{ investmentPerformance.totalSpent | currency:'USD':'symbol':'1.2-2' }}</p>
         </div>
 
         <div>
