--- a/src/styles.scss
+++ b/src/styles.scss
@@ -116,3 +116,8 @@ mat-sidenav-content {
   background-color: #003366;
   color: white;
 }
+
+.p-card .p-card-body {
+  padding-bottom:0;
+  padding-top: 1.5rem;
+}
