--- a/src/styles.scss
+++ b/src/styles.scss
@@ -121,3 +121,7 @@ mat-sidenav-content {
   padding-bottom:0;
   padding-top: 1.5rem;
 }
+
+.search-container .highlighted {
+  font-weight: bold !important;
+}
