--- a/src/app/components/ticker-holdings-card/ticker-holdings-card.component.scss
+++ b/src/app/components/ticker-holdings-card/ticker-holdings-card.component.scss
@@ -48,6 +48,12 @@ p-chart.p-element {
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-around;
+}
+
+.inner-card {
+    max-width: 40%;
+    margin-right:1em;
 }
 
 :host ::ng-deep  .inner-card .p-card {
@@ -67,7 +73,6 @@ p-chart.p-element {
 
 .price-chart {
     max-width: 66%;
-    margin-right: 5%;
     box-sizing: border-box;
 }
 
@@ -80,7 +85,7 @@ p-chart.p-element {
 }
 
 .return-analytics section p{
-    font-size: 24px;
+    font-size: 20px;
 }
 
 @media (max-width: 1279px) {
