--- a/src/app/components/transactions-history-overview/transactions-history-overview.component.html
+++ b/src/app/components/transactions-history-overview/transactions-history-overview.component.html
@@ -1,126 +1,127 @@
-<h1 *ngIf="stockTicker">{{ stockTicker }}</h1>
+<div class="main-container">
+    <h1 *ngIf="stockTicker">{{ stockTicker }}</h1>
 
-<!-- Loading Skeletons for Investment Performance and Transaction Ledger -->
-<div *ngIf="isLoadingInvestmentPerformance; else investmentPerformanceTemplate">
-    <h2>Investment Overview</h2>
-    <p-skeleton width="60%" height="20px"></p-skeleton>
-    <br />
-    <p-skeleton width="80%" height="40px"></p-skeleton>
-    <br />
-    <p-skeleton width="100%" height="30px"></p-skeleton>
-</div>
-
-<ng-template #investmentPerformanceTemplate>
-    <div *ngIf="currentStockPrice !== null">
-        <h2>Current Stock Price: ${{ currentStockPrice.toFixed(2) }}</h2>
-    </div>
-
-    <div *ngIf="investmentPerformance; else noInvestmentDataTemplate">
+    <!-- Loading Skeletons for Investment Performance and Transaction Ledger -->
+    <div *ngIf="isLoadingInvestmentPerformance; else investmentPerformanceTemplate">
         <h2>Investment Overview</h2>
+        <p-skeleton width="60%" height="20px"></p-skeleton>
+        <br />
+        <p-skeleton width="80%" height="40px"></p-skeleton>
+        <br />
+        <p-skeleton width="100%" height="30px"></p-skeleton>
+    </div>
 
-        <div>
-            <p>Total Shares Held: {{ getTotalSharesHeld() }}</p>
+    <ng-template #investmentPerformanceTemplate>
+        <div *ngIf="currentStockPrice !== null">
+            <h2 class="current-price">Current Stock Price: ${{ currentStockPrice.toFixed(2) }}</h2>
         </div>
 
-        <div>
-            <span [ngClass]="{
-                'positive': investmentPerformance.currentInvestmentValue >= investmentPerformance.totalSpent,
-                'negative': investmentPerformance.currentInvestmentValue < investmentPerformance.totalSpent
-            }">
-                Current Value: {{ investmentPerformance.currentInvestmentValue | currency:'USD':'symbol':'1.2-2' }}
-            </span>
+        <div *ngIf="investmentPerformance; else noInvestmentDataTemplate">
+            <h2>Investment Overview</h2>
+            <p-card>
+                <div class="overview-container">
+                    <div class="shares-balance">
+                        <p>Total Shares Held: {{ getTotalSharesHeld() }}</p>
+                    </div>
+
+                    <div class="analytics-container">
+                        <p>Invested: {{ investmentPerformance.totalSpent | currency:'USD':'symbol':'1.2-2' }}</p>
+                        <p>ROI: {{ investmentPerformance.roi }}%</p>
+                    </div>
+
+                    <div class="analytics-container">
+                        <p>
+                            Current Value: {{ investmentPerformance.currentInvestmentValue |
+                            currency:'USD':'symbol':'1.2-2'
+                            }}
+                        </p>
+                        <p>
+                            Net Profit/Loss:
+                            <span [style.color]="investmentPerformance.netProfitLoss > 0 ? 'green' : 'red'">
+                                {{ investmentPerformance.netProfitLoss | currency:'USD':'symbol':'1.2-2' }}
+                            </span>
+                        </p>
+                    </div>
+                </div>
+            </p-card>
+
+            <br>
+            <h2>Stock Performance Since Investing: </h2>
+            <div class="data-chart">
+                <p-chart type="line" [data]="chartDataPrices" [options]="chartOptionsPrices" [height]="chartHeight"
+                    [width]="chartWidth">
+                </p-chart>
+            </div>
+
+            <ng-template #noInvestmentDataTemplate class="main-container">
+                <p-skeleton width="60%" height="20px"></p-skeleton>
+                <br />
+                <p-skeleton width="80%" height="40px"></p-skeleton>
+                <br />
+                <p-skeleton width="80%" height="30px"></p-skeleton>
+            </ng-template>
+
         </div>
 
-        <div>
-            <p>
-                Net Profit/Loss: 
-                <span [style.color]="investmentPerformance.netProfitLoss > 0 ? 'green' : 'red'">
-                    {{ investmentPerformance.netProfitLoss | currency:'USD':'symbol':'1.2-2' }}
-                </span>
-            </p>
-
-            
-        </div>
-
-
-        
-        
-        <div>
-            <p>ROI: {{ investmentPerformance.roi }}%</p>
-            <p>Invested: {{ investmentPerformance.totalSpent | currency:'USD':'symbol':'1.2-2' }}</p>
-        </div>
-
-        <div>
-            <h2>Daily Pricing Chart</h2>
-            <p-chart
-                type="line"
-                [data]="chartDataPrices"
-                [options]="chartOptionsPrices"
-                [height]="chartHeight"
-                [width]="chartWidth">
-            </p-chart>
-        </div>
-
-        <ng-template #noInvestmentDataTemplate>
-            <h3>No investment performance data available.</h3>
+        <ng-template #noInvestmentDataTemplate class="main-container">
+            <p-skeleton width="60%" height="20px"></p-skeleton>
+            <br />
+            <p-skeleton width="80%" height="40px"></p-skeleton>
+            <br />
+            <p-skeleton width="80%" height="30px"></p-skeleton>
         </ng-template>
+    </ng-template>
 
+    <div *ngIf="isLoadingTransactions; else transactionsTemplate">
+        <h2>Account History</h2>
+        <p-skeleton></p-skeleton>
+        <br />
+        <p-skeleton width="100%" height="200px"></p-skeleton>
+        <br />
+        <p-skeleton width="80%" height="150px"></p-skeleton>
     </div>
 
-    <ng-template #noInvestmentDataTemplate>
-        <h3>No investment performance data available.</h3>
-    </ng-template>
-</ng-template>
+    <ng-template #transactionsTemplate>
+        <h2>Account History</h2>
+        <div *ngIf="transactions.length > 0; else noTransactionDataTemplate" class="history-container">
+            <div class="table-container">
+                <p-table [value]="transactions" [paginator]="true" [rows]="5">
+                    <ng-template pTemplate="header">
+                        <tr>
+                            <th>Date</th>
+                            <th>Type</th>
+                            <th>Units</th>
+                            <th>Value</th>
+                            <th>Balance</th>
+                            <th>Price</th>
+                            <th>Account Balance</th>
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="body" let-transaction>
+                        <tr>
+                            <td>{{ transaction.tickerTransaction.date | date: 'mediumDate' }}</td>
+                            <td
+                                [ngStyle]="{'font-weight': 'bold', color: transaction.tickerTransaction.metadata === 'BUY' ? 'green' : 'red'}">
+                                {{ transaction.tickerTransaction.metadata }}
+                            </td>
+                            <td>{{ transaction.tickerTransaction.units }}</td>
+                            <td>{{ transaction.tickerTransaction.value | currency:'USD':'symbol':'1.2-2' }}</td>
+                            <td>{{ transaction.tickerTransaction.balance | number:'1.2-2' }}</td>
+                            <td>{{ transaction.accountTransaction.value | currency:'USD':'symbol':'1.2-2' }}</td>
+                            <td>{{ transaction.accountTransaction.balance | currency:'USD':'symbol':'1.2-2' }}</td>
+                        </tr>
+                    </ng-template>
+                </p-table>
+            </div>
+            <div class="data-chart">
+                <p-chart type="line" [data]="chartDataAccount" [options]="chartOptionsAccount" [height]="chartHeight"
+                    [width]="chartWidth">
+                </p-chart>
+            </div>
+        </div>
 
-<div *ngIf="isLoadingTransactions; else transactionsTemplate">
-    <h1>Account History</h1>
-    <p-skeleton></p-skeleton>
-    <br />
-    <p-skeleton width="100%" height="200px"></p-skeleton>
-    <br />
-    <p-skeleton width="80%" height="150px"></p-skeleton>
+        <ng-template #noTransactionDataTemplate>
+            <h3>No transaction data available for this stock.</h3>
+        </ng-template>
+    </ng-template>
 </div>
-
-<ng-template #transactionsTemplate>
-    <div *ngIf="transactions.length > 0; else noTransactionDataTemplate">
-        <h1>Account History</h1>
-        <p-table [value]="transactions" [paginator]="true" [rows]="5">
-            <ng-template pTemplate="header">
-                <tr>
-                    <th>Date</th>
-                    <th>Type</th>
-                    <th>Units</th>
-                    <th>Value</th>
-                    <th>Balance</th>
-                    <th>Price</th>
-                    <th>Account Balance</th>
-                </tr>
-            </ng-template>
-            <ng-template pTemplate="body" let-transaction>
-                <tr>
-                    <td>{{ transaction.tickerTransaction.date | date: 'mediumDate' }}</td>
-                    <td [ngStyle]="{'font-weight': 'bold', color: transaction.tickerTransaction.metadata === 'BUY' ? 'green' : 'red'}">
-                        {{ transaction.tickerTransaction.metadata }}
-                    </td>
-                    <td>{{ transaction.tickerTransaction.units }}</td>
-                    <td>{{ transaction.tickerTransaction.value | currency:'USD':'symbol':'1.2-2' }}</td>
-                    <td>{{ transaction.tickerTransaction.balance | number:'1.2-2' }}</td>
-                    <td>{{ transaction.accountTransaction.value | currency:'USD':'symbol':'1.2-2' }}</td>
-                    <td>{{ transaction.accountTransaction.balance | currency:'USD':'symbol':'1.2-2' }}</td>
-                </tr>
-            </ng-template>
-        </p-table>
-
-        <p-chart
-            type="line"
-            [data]="chartDataAccount"
-            [options]="chartOptionsAccount"
-            [height]="chartHeight"
-            [width]="chartWidth">
-        </p-chart>
-    </div>
-
-    <ng-template #noTransactionDataTemplate>
-        <h3>No transaction data available for this stock.</h3>
-    </ng-template>
-</ng-template>
